# shader_so_cool

./: .gitignore  Cargo.toml  build.rs  config.rs  eeg.csv  justfile  kintaro.socool  kintaro.socool.json  kintaro2.socool  kintaro3.socool  kintaro4.socool  kintaro5.socool  kintaro6.socool  meg.socool  render.sh  rlb.socool  simple.socool  simple.socool.json  todo.socool  todo2.socool  todo_live.socool
benches/: something.rs
data/: data_clean.py  eeg_001.csv  eeg_002.csv  eeg_003.csv  eeg_004.csv  eeg_005.csv  eeg_006.csv  eeg_007.csv  eeg_008.csv  eeg_009.csv  eeg_010.csv  eeg_011.csv  eeg_012.csv  meg_0121.csv  meg_0131.csv  meg_0211.csv  meg_0221.csv  meg_0231.csv  meg_0311.csv  meg_0321.csv  meg_0331.csv  meg_1511.csv  meg_1521.csv  meg_1531.csv
egui_app/: Cargo.toml
egui_app/src/: lib.rs  main.rs
egui_demo_app/: Cargo.toml
egui_demo_lib/: Cargo.toml
egui_demo_lib/src/: lib.rs  wrap_app.rs
egui_demo_lib/src/apps/: mod.rs
egui_demo_lib/src/apps/demo/: demo_app_windows.rs  misc_demo_window.rs  mod.rs  widget_gallery.rs
egui_lib/: Cargo.toml
egui_lib/src/: lib.rs  wrap_app.rs
egui_lib/src/apps/: mod.rs
egui_lib/src/apps/controls/: app.rs  mod.rs  widget_gallery.rs  windows.rs
shadertoy/: Cargo.toml
shadertoy/src/: main.rs  prelude.wgsl  shader.rs  shader.wgsl
src/: camera.rs  clock.rs  color.rs  config.rs  helpers.rs  image.wgsl  input.rs  instance.rs  lib.rs  main.rs  origami_shader.wgsl  prelude.wgsl  print.rs  render.rs  render_op.rs  render_pipleline.rs  renderable.rs  resize.rs  setup.rs  shader.frag  shader.wgsl  state.rs  texture.rs  toy.wgsl  toy2.wgsl  toy3.wgsl  uniforms.rs  update.rs  vertex.rs
src/application/: live.rs  mod.rs  print.rs  realtime.rs  utils.rs
src/audio/: mod.rs
src/camera/: default.rs  mod.rs
src/canvas/: mod.rs
src/clock/: mod.rs
src/color/: helpers.rs  mod.rs
src/composition/: init.rs  mod.rs  render.rs
src/error/: mod.rs
src/frame/: frame_shader.wgsl  instance.rs  mod.rs  render.rs  resize.rs  setup.rs  types.rs  vertex.rs
src/glyphy/: mod.rs
src/image_renderer/: create_image_render_pipeline.rs  image_render.rs  image_renderer.rs  image_texture.rs  image_vertex.rs  mod.rs  setup.rs
src/instance/: instancer.rs  mod.rs  raw.rs
src/main_texture/: mod.rs  render.rs  resize.rs  setup.rs  texture.rs  types.rs  vertex.rs
src/op_stream/: mod.rs  renderpasses.rs
src/origami/: mod.rs  render_pipeline.rs  uniforms.rs  vertex.rs
src/origami/shaders/: toy3.wgsl
src/print/: init.rs  mod.rs  render.rs  update.rs  write.rs
src/realtime/: gui.rs  input.rs  mod.rs  render.rs  render_gui.rs  resize.rs  setup.rs  update.rs
src/render_op/: mod.rs
src/renderable/: mod.rs
src/sampler/: instance.rs  mod.rs  render.rs  render_pipeline.rs  resize.rs  sampler_shader.wgsl  setup.rs  types.rs  uniforms.rs  vertex.rs
src/save/: mod.rs
src/shader/: mod.rs
src/shared/: helpers.rs  mod.rs  render.rs  render_pass.rs  render_pipeline.rs  update.rs
src/surface/: mod.rs
src/toy/: create_toy_render_pipeline.rs  mod.rs  shader.rs  toy.wgsl  uniforms.rs
src/uniforms/: mod.rs
src/unused/: blur.glsl  channel.rs  setup_shader.rs
src/vertex/: mod.rs  shape.rs
src/watch/: mod.rs
