[package]
name = "kintaro"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
bytemuck = { version = "1.7.0", features = [ "derive" ] }
cgmath = { version = "0.18", features = [ "serde" ] }
chrono = "0.4.19"
dyn-clone = "1.0.4"
egui = "0.14.0"
egui_wgpu_backend = "0.12.0"
egui_winit_platform = "0.10.0"
env_logger = "0.8"
epi = "0.14.0"
fs_extra = "1.2.0"
futures = "0.3.14"
hex = "0.4.3"
image = "0.23"
kintaro_egui_lib = { path = "egui_lib" }
log = "0.4"
rand = "0.8.4"
rayon = "1.5.1"
rodio = "0.14.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
shaderc = "0.7.2"
weresocool = { path = "../weresocool" }
wgpu = "0.10.0"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.7"
