[package]
name = "kintaro"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
bytemuck = { version = "1.7.0", features = [ "derive" ] }
cgmath = { version = "0.18", features = [ "serde" ] }
chrono = "0.4.19"
dyn-clone = "1.0.4"
env_logger = "0.8"
futures = "0.3.14"
hex = "0.4.3"
image = "0.23"
kintaro_egui_lib = { path = "egui_lib" }
log = "0.4"
rand = "0.8.4"
rayon = "1.5.1"
rodio = "0.14.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
weresocool = { path = "../weresocool" }
wgpu = "0.11.0"
winit = "0.25.0"
