[package]
name = "kintaro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
incremental = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[patch.crates-io]
#uuid = { git = 'https://github.com/gfx-rs/wgpu' }

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.51"
bytemuck = { version = "1.7.0", features = [ "derive" ] }
cgmath = { version = "0.18", features = [ "serde" ] }
chrono = "0.4.19"
dyn-clone = "1.0.4"
env_logger = "0.8"
futures = "0.3.19"
hex = "0.4.3"
image = "0.23"
kintaro_egui_lib = { path = "egui_lib" }
log = "0.4"
rand = "0.8.4"
raw-window-handle = "0.3"
rodio = "0.14.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
weresocool = { path = "../weresocool", package="weresocool_core" }
weresocool_instrument = { path = "../weresocool/instrument"}
opmap = { path = "../weresocool/opmap" }
wgpu = "0.12.0"
wgpu-types = "=0.12.0"
winit = "0.26.0"
cradle = "0.2.0"
indexmap = "1.6.2"
colored = "2.0.0"
pollster = "0.2.4"
wgpu_glyph = "0.16.0"
regex = "1.5.4"
async-std = "1.10.0"
thiserror = "1.0.30"
notify = "5.0.0-pre.14"
crossbeam-channel = "0.5.4"
criterion = "0.3.5"

[[bench]]
name = "something"
harness = false

# [[bin]]
# name = "explore"
# path = "bin/explore.rs"
