[package]
name = "kintaro_egui_app"
version = "0.14.0"
authors = ["Danny Meyer <kintaro@xasopheno.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.14.0", features=["time"] }
kintaro_egui_lib = { version = "0.14.0", path = "egui_lib", features = ["extra_debug_asserts"] }

