[package]
name = "kintaro_egui_lib"
version = "0.14.0"
authors = ["Danny Meyer <kintaro@xasopheno.com"]
description = "Kintaro Egui"
edition = "2018"
homepage = ""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = ""
categories = ["gui", "graphics"]
keywords = ["weresocool"]
resolver = "2"

[dependencies]
egui = { version = "0.16.0" }
epi = { version = "0.16.0" }
egui_wgpu_backend = "0.16.0"
egui_winit_platform = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
wgpu = "=0.12.0"
wgpu-types = "=0.12.0"
